--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "scripts": {
   	"start": "node index.js"
   },
+  "engines":{
+    "node": "8.4.0",
+    "npm": "5.3.0"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
