--- a/package.json
+++ b/package.json
@@ -3,16 +3,20 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-  	"start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
-  "engines":{
+  "engines": {
     "node": "8.4.0",
     "npm": "5.3.0"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.15.4"
+    "express": "^4.15.4",
+    "nodemon": "^1.11.0",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^1.0.0"
   },
   "devDependencies": {},
   "description": ""
