--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\" \"npm run webhook\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
-    "webhook": "lt -p 5000 -s asdadfasfasdf4eafd"
+    "webhook": "./sendgrid_webhook.sh"
   },
   "engines": {
     "node": "8.4.0",
