--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "concurrently": "^3.5.0",
     "cookie-session": "^1.3.0",
     "express": "^4.15.4",
+    "fast-csv": "^2.4.1",
     "localtunnel": "^1.8.3",
     "lodash": "^4.17.4",
     "mongoose": "^4.11.8",
+    "multer": "^1.3.0",
     "nodemon": "^1.11.0",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
